--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,8 +1,9 @@
 <div class="row">
   <div class="ui grid center aligned">
-    <div class="three wide column center aligned" *ngFor="let element of elements">
+    <div class="two wide column middle aligned" *ngFor="let element of elements">
       <img [src]="element.imageUrl" alt="photo">
-      <p>{{ element.title }}</p>
+      <h3>{{element.title}}</h3>
+      <p>{{ element.description }}</p>
     </div>
   </div>
 </div>
