--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,99 +1,15 @@
-
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
-  <a class="active item">Home</a>
-  <a class="item">Work</a>
-  <a class="item">Company</a>
-  <a class="item">Careers</a>
-  <a class="item">Login</a>
-  <a class="item">Signup</a>
+    <a class="active item">Home</a>
+    <a class="item">Work</a>
+    <a class="item">Company</a>
+    <a class="item">Careers</a>
+    <a class="item">Login</a>
+    <a class="item">Signup</a>
 </div>
 
+<header></header>
 
-<app-menu></app-menu>
+<router-outlet></router-outlet>
 
-<!-- Page Contents -->
-<div class="pusher">
-  <div class="ui inverted vertical masthead center aligned segment">
-      <div class="ui text container">
-        <h1 class="ui inverted header">
-          Raouf Chebri
-        </h1>
-        <h2>Software Developer Engineer | MBA.</h2>
-        <!-- <a href = "#about" class="ui huge primary button">Scroll Down <i class="down arrow icon"></i></a> -->
-    </div>
-  </div>
-  
-  <!-- BEGIN ::  ABOUT -->
-  <div id="about" class="ui vertical stripe segment">
-    <div class="ui header middle center aligned row">
-      <h3 class="ui header">About</h3>
-    </div>
-    <div class="ui middle aligned stackable grid container">
-      <div class="center aligned row">
-        <div class="six wide column">
-          <img src="../assets/images/hvaler.jpg" class="ui large bordered rounded image">
-
-          <h3 class="ui header">Who's this guy?</h3>
-            <p>Raouf Chebri is a Software Developer Engineer and an MBA with experience in backend and frontend development and a growing interest
-              for Machine Learning, Deep Learning and Computer Vision.</p>
-        </div>
-        <div class="eight wide right floated column">
-          <div class="five wide column"  *ngFor="let s of skillSet">
-            <app-skill [title]="s.title" [color]="s.color" [value]="s.value" [url]="s.url"></app-skill>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="center aligned column">
-          <!-- <a class="ui huge button">Check Them Out</a> -->
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- END :: ABOUT -->
-  <!-- BEGIN :: TECHNICAL SUMMARY -->
-  
-  <div id="frameworks" class="ui vertical stripe segment">
-    <div class="ui header middle center aligned row">
-      <h3 class="ui header">Frameworks</h3>
-    </div>
-    <list [elements] = "frameworks"></list>
-  </div>
-
-  <div class="ui vertical stripe segment">
-    <div class="ui header middle center aligned row">
-      <h3 class="ui header">Code Base & Cloud Services</h3>
-    </div>
-    <list [elements] = "cloud"></list>
-  </div>
-
-  <!-- END :: TECHNICAL SUMMARY -->
-
-  <!-- BEGIN :: EXPERIENCE -->
-  <div id="journey" class="ui vertical stripe segment">
-    <div class="ui header middle center aligned row">
-      <h3 class="ui header">Journey</h3>
-    </div>
-        <timeline></timeline>
-    </div>
-  </div>
-  <!-- END :: EXPERIENCE -->
-
-  <!-- BEGIN :: EDUCATION -->
-  <div class="ui vertical stripe segment">
-    <div class="ui header middle center aligned row">
-      <h3 class="ui header">Education & Certifications</h3>
-    </div>
-    <list [elements] = "education"></list>
-  </div>
-  <!-- END :: EDUCATION -->
-
-  <!-- BEGIN :: INTERESTS -->
-  <div class="ui vertical stripe segment">
-    <div class="ui header middle center aligned row">
-      <h3 class="ui header">Interests</h3>
-    </div>
-    <list [elements] = "interests"></list>
-  </div>
-  <!-- END :: INTERESTS -->
+<footer></footer>
