--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
     <a class="item">Signup</a>
 </div>
 
-<header></header>
+<app-header></app-header>
 
 <router-outlet></router-outlet>
 
-<footer></footer>
+<app-footer></app-footer>
