--- a/src/app/views/pages/home/home.component.scss
+++ b/src/app/views/pages/home/home.component.scss
@@ -16,6 +16,11 @@ h3.ui.header {
   }
 }
 
+.ui.stackable.grid h3 {
+  margin: 0px;
+  padding: 1em;
+}
+
 .masthead.segment {
     min-height: 1080px;
     padding: 1em 0em;
