--- a/src/app/views/pages/post/post.component.scss
+++ b/src/app/views/pages/post/post.component.scss
@@ -11,3 +11,11 @@ img {
 p {
     justify-content: start;
 }
+
+.ui.placeholder.header {
+    margin-bottom: 1em;
+}
+
+.square.image {
+    margin-top: 20px;
+}
